@@ -475,37 +475,37 @@ create_find_pane (GdictDefbox *defbox)
  
   priv = defbox->priv;
   
-  priv->find_pane = gtk_hbox_new (FALSE, 6);
+  priv->find_pane = gtk_hbox_new (FALSE, 0);
   gtk_container_set_border_width (GTK_CONTAINER (priv->find_pane), 0);
   
   hbox1 = gtk_hbox_new (FALSE, 6);
   gtk_box_pack_start (GTK_BOX (priv->find_pane), hbox1, TRUE, TRUE, 0);
   gtk_widget_show (hbox1);
+
+  hbox2 = gtk_hbox_new (FALSE, 12);
+  gtk_box_pack_start (GTK_BOX (hbox1), hbox2, TRUE, TRUE, 0);
+  gtk_widget_show (hbox2);
  
   label = gtk_label_new_with_mnemonic (_("F_ind:"));
-  gtk_box_pack_start (GTK_BOX (hbox1), label, FALSE, FALSE, 0);
+  gtk_box_pack_start (GTK_BOX (hbox2), label, FALSE, FALSE, 0);
 
   priv->find_entry = gtk_entry_new ();
   g_signal_connect (priv->find_entry, "changed",
   		    G_CALLBACK (find_entry_changed_cb), defbox);
-  gtk_box_pack_start (GTK_BOX (hbox1), priv->find_entry, TRUE, TRUE, 0);
+  gtk_box_pack_start (GTK_BOX (hbox2), priv->find_entry, TRUE, TRUE, 0);
   gtk_label_set_mnemonic_widget (GTK_LABEL (label), priv->find_entry);
   
   sep = gtk_vseparator_new ();
-  gtk_box_pack_start (GTK_BOX (priv->find_pane), sep, FALSE, FALSE, 0);
+  gtk_box_pack_start (GTK_BOX (hbox1), sep, FALSE, FALSE, 0);
   gtk_widget_show (sep);
 
-  hbox2 = gtk_hbox_new (FALSE, 6);
-  gtk_box_pack_start (GTK_BOX (priv->find_pane), hbox2, TRUE, TRUE, 0);
-  gtk_widget_show (hbox2);
-  
   priv->find_prev = gtk_button_new_with_mnemonic (_("_Previous"));
   gtk_button_set_image (GTK_BUTTON (priv->find_prev),
   			gtk_image_new_from_stock (GTK_STOCK_GO_BACK,
   						  GTK_ICON_SIZE_MENU));
   g_signal_connect (priv->find_prev, "clicked",
   		    G_CALLBACK (find_prev_clicked_cb), defbox);
-  gtk_box_pack_start (GTK_BOX (hbox2), priv->find_prev, FALSE, FALSE, 0);
+  gtk_box_pack_start (GTK_BOX (hbox1), priv->find_prev, FALSE, FALSE, 0);
 
   priv->find_next = gtk_button_new_with_mnemonic (_("_Next"));
   gtk_button_set_image (GTK_BUTTON (priv->find_next),
@@ -513,11 +513,11 @@ create_find_pane (GdictDefbox *defbox)
   						  GTK_ICON_SIZE_MENU));
   g_signal_connect (priv->find_next, "clicked",
   		    G_CALLBACK (find_next_clicked_cb), defbox);
-  gtk_box_pack_start (GTK_BOX (hbox2), priv->find_next, FALSE, FALSE, 0);
+  gtk_box_pack_start (GTK_BOX (hbox1), priv->find_next, FALSE, FALSE, 0);
   
   priv->find_label = gtk_label_new (NULL);
   gtk_label_set_use_markup (GTK_LABEL (priv->find_label), TRUE);
-  gtk_box_pack_end (GTK_BOX (hbox2), priv->find_label, FALSE, FALSE, 0);
+  gtk_box_pack_end (GTK_BOX (priv->find_pane), priv->find_label, FALSE, FALSE, 0);
   gtk_widget_hide (priv->find_label);
 }
 
