@@ -1,5 +1,10 @@
 2005-12-19  Emmanuele Bassi  <ebassi@cvs.gnome.org>
 
+	* libgdict/gdict-defbox.c (create_find_pane): another shot at getting
+	the find pane layout right (closes bug #324342).
+
+2005-12-19  Emmanuele Bassi  <ebassi@cvs.gnome.org>
+
 	* data/GNOME_DictionaryApplet.server.in.in: add the old GDict applet
 	OAFIID to the .server file, for backward compatibility.
 
